# VulnerableCredentialsManager

./: .gitignore  README.md  meson.build
sql/: schema.sql  values.sql
src/: main.c  meson.build
src/credentials/: credentials.c  credentials.h
